--- a/Index.html
+++ b/Index.html
@@ -9,7 +9,7 @@
 <body>
     <nav class="navbar background1 h-nav-resp">
         <ul class="nav-list v-class-resp">
-            <div class="logo"><img src="image/img1.jpeg" alt="logo"></div>
+            <div class="logo"><img src="img1.jpeg" alt="logo"></div>
             <li><a href='#home'>Home </a></li>
             <li><a href='#about us'>About Us </a></li>
             <li><a href='#event gallary'>Event Gallary</a></li>
@@ -38,7 +38,7 @@
                 </a>
             </div>
             <div class="secondHalf">
-                <img src="image/img1.jpeg" alt="e image">
+                <img src="img1.jpeg" alt="e image">
             </div>
 
         </div>
@@ -52,7 +52,7 @@
             XYZ also organise the speaker's session , hackathons and much more. XYZ is just not a funding campany , its home to many big companies too.</p>
         </div>
             <din class="thumbnail">
-                <img src="image/img2.jpg" alt="e image" class="imgFluid">
+                <img src="img2.jpg" alt="e image" class="imgFluid">
             </din>
 
     </section>
@@ -65,7 +65,7 @@
             coming to our events every year.
         </div>
             <din class="thumbnail">
-                <img src="image/image1.2.avif" alt="e image" class="imgFluid">
+                <img src="image1.2.avif" alt="e image" class="imgFluid">
             </din>
 
     </section>
@@ -80,7 +80,7 @@
             We are also pleased to customize a speaker session to meet the needs of our audience.</p>
         </div>
             <din class="thumbnail">
-                <img src="image/img3 (1).jpg" alt="e image" class="imgFluid">
+                <img src="img3 (1).jpg" alt="e image" class="imgFluid">
             </din>
 
     </section>
