--- a/login.html
+++ b/login.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>PITCH PUNCH 2023</title>
-    <link rel="stylesheet" href="css/style2.css">
+    <link rel="stylesheet" href="style2.css">
     <!---we had linked our css file----->
 </head>
 <body>
