--- a/index.html
+++ b/index.html
@@ -111,7 +111,7 @@
         }
     </script>
     
-    <script src="js/respj.js"></script>
+    <script src="respj.js"></script>
     
 </body>
 </html>
