--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
                 <p class="text-small">The innovative mind of the country come together on the same platform 
                 where they pitch together about their ideas and get the funding upto 7.5 lakhs.
                 <br>More details coming soon click below to register and get updated.</p>
-                <a href="login.html" class="buttons">
+                <a href="login-register.html" class="buttons">
                     <button  class="btn" >Register For The Pitch Punch</button>
                 </a>
             </div>
