--- a/login-register.html
+++ b/login-register.html
@@ -15,7 +15,7 @@
             </div>
             <nav>
                 <ul id='MenuItems'>
-                    <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'" style="width:auto;">Login/Register</button></li>
+                    <li><button class='loginbtn' onclick="document.getElementById('login-form').style.display='block'" style="width:auto;">Login</button></li>
                 </ul>
             </nav>
         </div>
